--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -5,7 +5,7 @@ footer {
   a,
   i {
     color: $color-black;
-    font-family: $font-default;
+    font-family: $font-title;
   }
 }
 
